# dasein-python-sdk

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test-and-publish.yml
dasein/: __init__.py  client.py  exceptions.py  index.py  types.py
dynamic_hybrid_results/: dynamic_hybrid_external_full_results.md  dynamic_hybrid_internal_full_results.md  dynamic_hybrid_summary.md
examples/: quickstart.py
examples/movie_search/: app.py  requirements.txt
tests/: test_client.py
