[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasein-ai"
version = "0.1.0"
description = "Python SDK for the Dasein managed vector index service"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "Dasein AI", email = "nick@daseinai.ai"},
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://daseinai.ai"
Repository = "https://github.com/nickswami/dasein-python-sdk"

[tool.setuptools.packages.find]
include = ["dasein*"]
