[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dasein-ai"
version = "0.4.5"
description = "Python SDK for the Dasein managed vector index service"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
keywords = ["vector", "index", "search", "embeddings", "rag", "semantic-search"]
authors = [
    {name = "Dasein AI", email = "nick@daseinai.ai"},
]
dependencies = [
    "httpx>=0.24.0",
]

[project.urls]
Homepage = "https://www.daseinai.ai/"
Repository = "https://github.com/nickswami/dasein-python-sdk"

[tool.setuptools.packages.find]
include = ["dasein*"]
